--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,6 +7,9 @@
     <uses-permission android:name="android.permission.INTERNET"/>
     <!--Diskキャッシュに使いたいのでSDcardに書き込めるようにする-->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <!-- オムロンのデバイスを使うためのBluetoothの設定 -->
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
 
     <uses-sdk
         android:minSdkVersion="8"
